finished front end form validation, fixed infinite scroll, next going to add book covers

--- a/src/App.scss
+++ b/src/App.scss
@@ -25,11 +25,30 @@
 
 #primary{
   animation: infinite-scroll-primary 50s linear infinite;
+  -webkit-animation: infinite-scroll-primary 50s linear infinite;
 }
 
 #secondary{
   animation: infinite-scroll-secondary 50s linear infinite;
+  -webkit-animation: infinite-scroll-secondary 50s linear infinite;
 }
+
+@keyframes infinite-scroll-primary {
+  0% {
+    top: 0%;
+  }
+  100%{
+    top: -115%;
+  }
+};
+@keyframes infinite-scroll-secondary {
+  0% {
+    top: 115%;
+  }
+  100%{
+    top: 0%;
+  }
+};
 
 #primary:hover,
 #primary:hover~#secondary {
@@ -46,7 +65,6 @@
   animation-play-state: paused;
 }
 
-
 #scroll-container:hover>#primary:not(:hover) {
   -webkit-animation-play-state: paused;
   -moz-animation-play-state: paused;
@@ -54,19 +72,18 @@
   animation-play-state: paused;
 }
 
-@keyframes infinite-scroll-primary {
-  0% {
-    top: 0%;
+#scroll-container:hover{
+  #primary{
+    -webkit-animation-play-state: paused;
+    -moz-animation-play-state: paused;
+    -o-animation-play-state: paused;
+    animation-play-state: paused;    
   }
-  100%{
-    top: -115%;
-  }
-}
-@keyframes infinite-scroll-secondary {
-  0% {
-    top: 115%;
-  }
-  100%{
-    top: 0%;
+  #secondary{
+    -webkit-animation-play-state: paused;
+    -moz-animation-play-state: paused;
+    -o-animation-play-state: paused;
+    animation-play-state: paused;    
   }
 }
+
